[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adscan"
version = "8.0.0"
description = "Free Active Directory pentesting CLI for AD enumeration, BloodHound, Kerberoasting, AS-REP roasting, ADCS, DCSync, password spraying, and CTF labs."
readme = "README.md"
authors = [{ name = "ADscan" }]
requires-python = ">=3.9"
keywords = [
    "active-directory",
    "activedirectory",
    "pentesting",
    "penetration-testing",
    "enumeration",
    "bloodhound",
    "kerberoasting",
    "as-rep-roasting",
    "adcs",
    "dcsync",
    "password-spraying",
    "red-team",
    "ctf",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "rich>=13.0,<14.0",
    "requests>=2.31.0,<3.0",
    "packaging>=23.0,<26.0",
    "certifi>=2023.0.0",
    "sentry-sdk>=1.40.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "impacket==0.13.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.9.0,<1.0",
    "build>=1.2.0,<2.0",
    "twine>=6.0.0,<7.0",
    "mypy>=1.8.0",
    "types-requests",
    "pytest-html",
    "jinja2",
]
cli = [
    "impacket==0.13.0",
    "psutil",
    "python-docx",
    "weasyprint>=60.0",
    "playwright==1.57.0",
    "jinja2>=3.0",
    "graphviz>=0.20",
    "python-magic>=0.4.27,<0.5; platform_system == 'Linux'",
    "markitdown>=0.1.5,<0.2; python_version >= '3.10'",
    "dnspython>=2.7.0,<3.0",
    "pydantic-ai>=0.8.1",
    "netifaces",
    "prompt_toolkit",
    "questionary",
    "neo4j>=5.0.0",
    "posthog",
    "pypsrp",
    "pydantic-settings>=2.4.0",
    "selenium>=4.28.0,<5.0",
    "textual>=0.80.0",
    "redis>=5.0.0,<5.3.0",
]

[project.urls]
homepage = "https://github.com/ADscanPro/adscan"
documentation = "https://adscanpro.com/docs"
repository = "https://github.com/ADscanPro/adscan"
issues = "https://github.com/ADscanPro/adscan/issues"
changelog = "https://github.com/ADscanPro/adscan/releases"

[project.scripts]
adscan = "adscan_launcher.cli:main"
"adscan.py" = "adscan_launcher.cli:main"

[tool.setuptools]
packages = ["adscan_core", "adscan_launcher"]

[tool.setuptools.package-data]
adscan_launcher = ["assets/**/*.yml", "assets/**/*.yaml"]
adscan_internal = ["pro/reporting/templates/*.html"]
